[gd_scene load_steps=2 format=3 uid="uid://bqrj371w14b74"]

[ext_resource type="Script" path="res://CreationScreens/Scripts/RoutineCreation.gd" id="1_s1tca"]

[node name="RoutineCreationScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -4.0
offset_top = -2.0
offset_right = 59.0
offset_bottom = 40.0
script = ExtResource("1_s1tca")

[node name="MainScreen" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleText" type="RichTextLabel" parent="MainScreen"]
layout_mode = 0
offset_left = 158.0
offset_top = 41.0
offset_right = 662.0
offset_bottom = 121.0
theme_override_font_sizes/normal_font_size = 50
text = "Create New Routine"

[node name="RichTextLabel" type="RichTextLabel" parent="MainScreen"]
layout_mode = 0
offset_left = 13.0
offset_top = 164.0
offset_right = 192.0
offset_bottom = 205.0
theme_override_font_sizes/normal_font_size = 28
text = "Name: "

[node name="NameInput" type="LineEdit" parent="MainScreen"]
layout_mode = 0
offset_left = 144.0
offset_top = 155.0
offset_right = 802.0
offset_bottom = 216.0
theme_override_font_sizes/font_size = 25

[node name="RichTextLabel6" type="RichTextLabel" parent="MainScreen"]
layout_mode = 0
offset_left = 19.0
offset_top = 241.0
offset_right = 588.0
offset_bottom = 282.0
theme_override_font_sizes/normal_font_size = 28
text = "Exercises:"

[node name="GridContainer" type="GridContainer" parent="MainScreen"]
layout_mode = 0
offset_left = 10.0
offset_top = 962.0
offset_right = 812.0
offset_bottom = 1085.0
columns = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MainScreen/GridContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 28
text = "Num of Exercises:"

[node name="NumOfExer" type="LineEdit" parent="MainScreen/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
editable = false

[node name="RichTextLabel2" type="RichTextLabel" parent="MainScreen/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 28
text = "Approximate Time:"

[node name="ApproxTime" type="LineEdit" parent="MainScreen/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 25
editable = false

[node name="VBoxContainer" type="VBoxContainer" parent="MainScreen"]
visible = false
layout_mode = 0
offset_left = 30.0
offset_top = 982.0
offset_right = 808.0
offset_bottom = 1173.0

[node name="ProceedButton" type="Button" parent="MainScreen"]
layout_mode = 0
offset_left = 90.0
offset_top = 1322.0
offset_right = 717.0
offset_bottom = 1446.0
theme_override_font_sizes/font_size = 40
text = "Proceed"

[node name="BackButton" type="Button" parent="MainScreen"]
layout_mode = 0
offset_left = 257.0
offset_top = 1496.0
offset_right = 549.0
offset_bottom = 1588.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "<Back"

[node name="Routtine" type="Control" parent="MainScreen"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="MainScreen"]
layout_mode = 0
offset_left = 28.0
offset_top = 300.0
offset_right = 806.0
offset_bottom = 921.0

[node name="ExerciseButton" type="Button" parent="MainScreen/Panel"]
layout_mode = 0
offset_left = 44.0
offset_top = 483.0
offset_right = 727.0
offset_bottom = 585.0
theme_override_font_sizes/font_size = 30
text = "Add An Exercise"

[node name="ScrollContainer" type="ScrollContainer" parent="MainScreen/Panel"]
layout_mode = 0
offset_left = 30.0
offset_top = 18.0
offset_right = 760.0
offset_bottom = 507.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainScreen/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Item1" type="LineEdit" parent="MainScreen/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "Placeholder"
alignment = 1
editable = false

[node name="GetAllExercises" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TitleText" type="RichTextLabel" parent="GetAllExercises"]
layout_mode = 0
offset_left = 251.0
offset_top = 33.0
offset_right = 569.0
offset_bottom = 113.0
theme_override_font_sizes/normal_font_size = 50
text = "Add Exercise"

[node name="RichTextLabel6" type="RichTextLabel" parent="GetAllExercises"]
layout_mode = 0
offset_left = 32.0
offset_top = 239.0
offset_right = 601.0
offset_bottom = 280.0
theme_override_font_sizes/normal_font_size = 28
text = "All Exercises:"

[node name="Panel" type="Panel" parent="GetAllExercises"]
layout_mode = 0
offset_left = 31.0
offset_top = 285.0
offset_right = 809.0
offset_bottom = 1283.0

[node name="ScrollContainer" type="ScrollContainer" parent="GetAllExercises/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="GetAllExercises/Panel/ScrollContainer"]
layout_mode = 2
columns = 2

[node name="Button" type="Button" parent="GetAllExercises/Panel/ScrollContainer/GridContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "
Chest Lift

Difficulty: Foundational

Muscles Involved: e

Reccommended For Student?: 

"

[node name="HBoxContainer" type="HBoxContainer" parent="GetAllExercises"]
visible = false
layout_mode = 0
offset_left = 34.0
offset_top = 1314.0
offset_right = 804.0
offset_bottom = 1410.0

[node name="PrevButton" type="Button" parent="GetAllExercises/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "<Prev"

[node name="RichTextLabel" type="RichTextLabel" parent="GetAllExercises/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center] Page 1/2 [/center]"

[node name="NextButton" type="Button" parent="GetAllExercises/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Next>"

[node name="BackToMain" type="Button" parent="GetAllExercises"]
layout_mode = 0
offset_left = 35.0
offset_top = 1427.0
offset_right = 803.0
offset_bottom = 1535.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 30
text = "Back To Previous Screen"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(414, 896)

[connection signal="button_down" from="MainScreen/ProceedButton" to="." method="_on_proceed_button_down"]
[connection signal="button_down" from="MainScreen/BackButton" to="." method="_on_back_button_down"]
[connection signal="button_down" from="MainScreen/Panel/ExerciseButton" to="." method="_on_exercise_screen_button_down"]
[connection signal="button_down" from="GetAllExercises/HBoxContainer/PrevButton" to="." method="_on_proceed_button_down"]
[connection signal="button_down" from="GetAllExercises/HBoxContainer/NextButton" to="." method="_on_proceed_button_down"]
[connection signal="button_down" from="GetAllExercises/BackToMain" to="." method="_on_back_to_main_button_down"]
